--- a/app_flask/templates/index.html
+++ b/app_flask/templates/index.html
@@ -1,80 +1,63 @@
-<!DOCTYPE HTML>
-<html>
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <link rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-            crossorigin="anonymous"
-        />
-        <link rel="stylesheet"
-            href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-            crossorigin="anonymous"
-        />
-        <title>{% block title %}Home{% endblock %}</title>
-    </head>
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbar">
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link" id="home" href="/">Home</a>
-                    <a class="nav-item nav-link" id="about" href="/about">About</a>
-                    <a class="nav-item nav-link" id="contact" href="/contact">Contact</a>
-                </div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Service Mtaani</title>
+
+    <link rel="stylesheet" href="/static/styles/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+</head>
+
+<body class="container-fluid">
+      <div id="carouselExample" class="carousel carousel-dark slide" data-bs-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-bs-target="#carouselExample" data-bs-slide-to="0" class="active"></li>
+            <li data-bs-target="#carouselExample" data-bs-slide-to="1"></li>
+            <li data-bs-target="#carouselExample" data-bs-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner" >
+          <div class="carousel-item active " data-bs-interval="2000" >
+            <div class="image-area align-center-div " >
+                <img src="/static/images/logo.png" class=" img-fluid rounded" width="320px" height="320px" alt="...">
+            </div>
+            <div class=" carousel-caption d-none d-sm-block text-area text-center">
+                <h1>Service <span><img src="/static/images/cross.png" class=" img-fluid rounded" width="50px" height="50px" alt="..."></span> Mtaani</h1>
+                <p>The ultimate auto spa</p>
+            </div>
+          </div>
+          <div class="carousel-item " data-bs-interval="2000">
+            <div class="carousel-caption overlay d-none d-sm-block text-area text-center" >
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <p>Deleniti iste dolores id sint quaerat sequi autem natus ab necessitatibus</p>
+          </div>
+            <div class="image-area align-center-div ">
+                <img src="/static/images/tools.png" class="img-fluid rounded"  width="320px" height="320px" alt="...">
             </div>
 
-        </nav>
-        {% with messages = get_flashed_messages(with_categories=true) %} {% if
-            messages %} {% for category, message in messages %} {% if category ==
-            'error' %}
-        <div class="alert alert-danger alter-dismissable fade show" role="alert">
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert">
-                <span aria-hidden="true">&times;</span>
-            </button>
+          </div>
+          <div class="carousel-item " data-bs-interval="2000">
+            <div class="carousel-caption overlay d-none d-sm-block text-area text-center" >
+              <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+              <p>Deleniti iste dolores id sint quaerat sequi autem natus ab necessitatibus</p>
+            </div>
+            <div class="image-area align-center-div "  >
+                <img src="/static/images/man.png" class=" img-fluid  rounded"  width="320px" height="320px" alt="...">
+            </div>
         </div>
-            {% else %}
-        <div class="alert alert-success alter-dismissable fade show" role="alert">
-            {{ message }}
-            <button type="button" class="close" data-dismiss="alert">
-              <span aria-hidden="true">&times;</span>
-            </button>
-        </div>
-        {% endif %} {% endfor %} {% endif %} {% endwith %}
 
-        <div class="container">{% block content %} {% endblock %}</div>
+        <a class="carousel-control-prev" href="#carouselExample" role="button" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExample" role="button" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </a>
+    </div>
 
-        <script
-        src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-            crossorigin="anonymous"
-        ></script>
-  
-        {% block javascript %}
-        <script type="text/javascript">
-            function deleteNote(noteId) {
-            fetch("/delete-note", {
-            method: "POST",
-            body: JSON.stringify({ noteId: noteId }),
-        }).then((_res) => {
-            window.location.href = "/";
-        });
-        }
-        </script>
-            {% endblock %}
-    </body>
+      <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+  </body>
 </html>
