--- a/app_flask/templates/vendor_delivered.html
+++ b/app_flask/templates/vendor_delivered.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -9,10 +8,9 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <title>Vendor Home</title>
+    <title>Delivered Orders</title>
   </head>
   <body>
-    <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <div class="container">
           <a class="navbar-brand" href="#">
@@ -44,54 +42,50 @@
     <div class="row row-cols-auto justify-content-around">
         <div class="col-md-4">
             <div class="text-center text-white p-3 mb-3">
-                <button type="button" class="btn btn-outline-secondary bg-secondary text-light">Orders</button>
+                <a href="/vendor/orders" class="btn btn-outline-secondary text-dark" role="button">Orders</a>
             </div>
         </div>
         <div class="col-md-4">
             <div class="text-center text-white p-3 mb-3">
-                <button type="button" class="btn btn-outline-secondary">Delivered Orders</button>
+                <a href="#" class="btn btn-outline-secondary bg-secondary text-light" role="button">Delivered Orders</a>
+                <!-- <button type="button" class="btn btn-outline-secondary bg-secondary text-light">Delivered Orders</button> -->
             </div>
         </div>
         <div class="col-md-4">
             <div class="text-center text-white p-3 mb-3">
-                <button type="button" class="btn btn-outline-secondary">Catalogue</button>
+                <a href="/vendor/catalogue" class="btn btn-outline-secondary text-dark" role="button">Catalogue</a>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2">
-            <h3>Open orders</h3>
-        </div>
-        </div>
-        <div class="container">
-        <div class="accordion" id="accordionExample">
-        {% for item in items %}
-        <div class="accordion-item">
-            <h2 class="accordion-header" id="heading{{ loop.index }}">
-              <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="false" aria-controls="collapse{{ loop.index }}">
-                Open Order #1
-              </button>
-            </h2>
-            <div id="collapse{{ loop.index }}" class="accordion-collapse collapse" aria-labelledby="heading{{ loop.index }}" data-bs-parent="#accordionExample">
-              <div class="accordion-body">
-                <strong>Order Information</strong><br>
-                Client Name: {{ item.client_name }} <br>Client Phone Number: {{ item.client_phone }} <br>Parts: {{ item.parts}} <br><br>
-                <div>
-                    <button type="button" class="btn btn-outline-success">Mark as Completed</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        <br>
-        {% endfor %}
-        </div>
-        </div>
 
-    
-    <!-- Optional JavaScript; choose one of the two! -->
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
-    <!-- Option 2: Separate Popper and Bootstrap JS -->
+
+    <div class="container">
+    <div class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2">
+        <h3>Delivered orders</h3>
+    </div>
+    </div>
+    <div class="container">
+    <div class="accordion" id="accordionExample">
+    {% for item in items %}
+    <div class="accordion-item">
+        <h2 class="accordion-header" id="heading{{ loop.index }}">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="false" aria-controls="collapse{{ loop.index }}">
+            Open Order #{{ loop.index }}
+          </button>
+        </h2>
+        <div id="collapse{{ loop.index }}" class="accordion-collapse collapse" aria-labelledby="heading{{ loop.index }}" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            <strong>Order Information</strong><br>
+            Client Name: {{ item.client_name }} <br>Client Phone Number: {{ item.client_phone }} <br>Parts: {{ item.parts}} <br>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+    </div>
+    </div>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
    
