updated image routes

--- a/app_flask/templates/client_homepage.html
+++ b/app_flask/templates/client_homepage.html
@@ -12,7 +12,7 @@
     <!-- Navigation Bar -->
     <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav-10">
-        <img src="images/logo.png" alt="service mtaani logo" srcset="" height="40px">
+        <img src="../static/images/logo.png" alt="service mtaani logo" srcset="" height="40px">
         <a class="navbar-brand" href="#">ServiceMtaani</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -94,7 +94,7 @@
                 <div class="carousel-inner">
                   <div class="carousel-item">
                     <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label=" :  " preserveAspectRatio="xMidYMid slice" focusable="false"><title> </title><rect width="100%" height="100%" fill="#777" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #5a6165;"></rect><text x="50%" y="50%" fill="#777" dy=".3em" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"> </text></svg> -->
-                    <img src="images/mech 2.jpg" width="100%" height="100%" alt="gear image">
+                    <img src="../static/images/mech 2.jpg" width="100%" height="100%" alt="gear image">
                     <div class="container">
                       <div class="carousel-caption text-left">
                         <h1>Example headline.</h1>
@@ -105,7 +105,7 @@
                   </div>
                   <div class="carousel-item active">
                     <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label=" :  " preserveAspectRatio="xMidYMid slice" focusable="false"><title> </title><rect width="100%" height="100%" fill="#777" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"></rect><text x="50%" y="50%" fill="#777" dy=".3em" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"> </text></svg> -->
-                    <img src="images/mech 6.jpg" width="100%" height="100%" alt="gear image">
+                    <img src="../static/images/mech 6.jpg" width="100%" height="100%" alt="gear image">
                     <div class="container">
                       <div class="carousel-caption">
                         <h1>Another example headline.</h1>
@@ -116,7 +116,7 @@
                   </div>
                   <div class="carousel-item">
                     <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label=" :  " preserveAspectRatio="xMidYMid slice" focusable="false"><title> </title><rect width="100%" height="100%" fill="#777" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"></rect><text x="50%" y="50%" fill="#777" dy=".3em" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"> </text></svg> -->
-                    <img src="images/mch 2.jpg" width="100%" height="100%" alt="gear image">
+                    <img src="../static/images/mch 2.jpg" width="100%" height="100%" alt="gear image">
                     <div class="container">
                       <div class="carousel-caption text-right">
                         <h1>One more for good measure.</h1>
@@ -143,7 +143,7 @@
         <footer class="pt-4 my-md-5 pt-md-5 border-top">
             <div class="row">
             <div class="col-12 col-md">
-                <img class="mb-2" src="images/logo.png" alt="" width="30" height="20">
+                <img class="mb-2" src="../static/images/logo.png" alt="" width="30" height="20">
                 <small class="d-block mb-3 text-muted">© 2023</small>
             </div>
             <div class="col-6 col-md">
