--- a/app_flask/templates/mechanic_homepage.html
+++ b/app_flask/templates/mechanic_homepage.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ServiceMtaani</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/button.css">
+    <link rel="stylesheet" href="../static/styles/button.css">
 </head>
 <body>
     <div class="container">
@@ -47,12 +47,17 @@
         <div class="container job-tile">
             <!-- Example row of columns -->
             <div class="row">
+              {% for job in all_jobs %}
               <div class="col-md-4">
-                <h2>Car Wash</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Officia libero eius ullam cumque laborum cupiditate dignissimos aspernatur tempore, eveniet at in incidunt, nulla necessitatibus quas voluptas! Amet debitis temporibus nemo hic dicta nobis quos. Veritatis nostrum ducimus et dolores quas, fuga nemo nobis ab molestias nihil sequi atque praesentium suscipit?</p>
-                <p><a class="btn btn-secondary" href="#" role="button">Place Bid</a></p>
+                <h2>{{ job.job_title }}</h2>
+                <p>{{ job.job_description }}</p>
+                <div>
+                  <button type="button" class="bidForJob btn btn-outline-success" data-id2="{{ user_id }}" data-id="{{ job.id }}" data-toggle="modal" data-target="#bidModal">Bid For Job</button>
+                </div>
+                <!-- <p><a class="btn btn-secondary" href="#" role="button">Place Bid</a></p> -->
               </div>
-              <div class="col-md-4">
+              {% endfor %}
+              <!-- <div class="col-md-4">
                 <h2>Minor Service</h2>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nesciunt at error voluptatum consectetur. Molestiae ducimus reiciendis incidunt, reprehenderit hic doloribus sed, ea quod quidem, magni nemo provident animi inventore magnam aliquam. Fuga obcaecati soluta voluptatibus est reprehenderit neque inventore. Eum.</p>
                 <p><a class="btn btn-secondary" href="#" role="button">Place Bid</a></p>
@@ -61,7 +66,7 @@
                 <h2>Engine Overhaul</h2>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Modi eligendi alias maxime earum autem molestiae! Eius, laudantium repudiandae enim quas ex nemo laboriosam dolor sequi culpa officiis repellendus? Doloribus quibusdam tempore porro earum vel nisi.</p>
                 <p><a class="btn btn-secondary" href="#" role="button">Place Bid</a></p>
-              </div>
+              </div> -->
             </div>
         
             <hr>
@@ -164,8 +169,40 @@
         </footer>
         </div>      
     </div>
-    
+
+    <!-- Modal test -->
+    <div class="modal fade" id="bidModal" tabindex="-1" aria-labelledby="bidModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="bidModalLabel">Place Bid</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+          <form method="POST">
+            <div class="form-group">
+              <label for="formprice">Enter Bid Amount</label>
+              <input type="number" class="form-control" id="formprice" placeholder="Amount in Ksh. eg. 5000">
+              <input type="hidden" name="mechanic_id" value="{{ user_id }}">
+          </div>
+          <!-- <div class="form-group">
+            <label for="formprice">Enter Bid Amount</label>
+            <input type="number" class="form-control" id="formprice" placeholder="Amount in Ksh. eg. 5000">
+          </div> -->
+          <br><button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+            <!-- <a href="/mechanic/place_bid" class="btn btn-outline-secondary text-dark" role="button">Place Order</a> -->
+          </div>
+        </div>
+      </div>
+    </div>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
+    <script src="../static/scripts/modal_bid.js"></script>
 </body>
 </html>
