--- a/app_flask/templates/signup.html
+++ b/app_flask/templates/signup.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+{% extends "base.html" %}
 {% block title %}Sign Up{% endblock %}
 {% block content %}
 <form method="POST">
