--- a/app_flask/templates/test_route.html
+++ b/app_flask/templates/test_route.html
@@ -11,134 +11,42 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <!-- <h1>Hello World</h1> -->
-    
-    <button type="button" class="btn btn-outline-primary">Primary</button>
-    <button type="button" class="btn btn-outline-secondary">Secondary</button>
-    <button type="button" class="btn btn-outline-success">Success</button>
-    <button type="button" class="btn btn-outline-danger">Danger</button>
-    <button type="button" class="btn btn-outline-warning">Warning</button>
-    <button type="button" class="btn btn-outline-info">Info</button>
-    <button type="button" class="btn btn-outline-light">Light</button>
-    <button type="button" class="btn btn-outline-dark">Dark</button>
-    
-    <div class="container">
-        <nav class="nav nav-pills nav-fill">
-            <a class="nav-link active" aria-current="page" href="#">Orders</a>
-            <a class="nav-link" href="#">Delivered Orders</a>
-            <a class="nav-link" href="#">Catalogue</a>
-        </nav>
-        <div class="row row-cols-auto justify-content-around">
-            <div class="col-md-4">
-                <div class="text-center text-white p-3 mb-3">
-                    <button type="button" class="btn btn-outline-secondary">Orders</button>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="text-center text-white p-3 mb-3">
-                    <nav class="nav nav-pills nav-fill">
-                    <a class="nav-link active" aria-current="page" href="#">Orders</a>
-                    </nav>
-                    <!-- <button type="button" class="btn btn-outline-secondary">Delivered Orders</button> -->
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="text-center text-white p-3 mb-3">
-                    <button type="button" class="btn btn-outline-secondary">Catalogue</button>
-                </div>
-            </div>
+
+    <button type="button" class="btn btn-primary" onclick="openbidModal('job123')">Place Bid</button>
+
+  <!-- Modal HTML -->
+  <div class="modal fade" id="bidModal" tabindex="-1" role="dialog" aria-labelledby="bidModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="bidModalLabel">Place Bid</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
         </div>
-        </div>
-        <section class="bg-image" style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/Others/images/76.webp')">
-          <div class="container">
-        <div class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2 text-light">
-            <h3>Open orders</h3>
-        </div>
-        <div class="accordion" id="accordionExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                    Open Order #1
-                  </button>
-                </h2>
-                <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                  <div class="accordion-body">
-                    <strong>Order Information</strong><br>
-                    Client Name: <br>Client Phone Number: <br>Parts: <br><br>
-                    <div>
-                        <button type="button" class="btn btn-outline-success">Mark as Completed</button>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
-                  <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                    Open Order #2
-                  </button>
-                </h2>
-                <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                    <div class="accordion-body">
-                        <strong>Order Information</strong><br>
-                        Client Name: <br>Client Phone Number: <br>Parts: <br><br>
-                        <div>
-                            <button type="button" class="btn btn-outline-success">Mark as Completed</button>
-                        </div>
-                      </div>
-                </div>
-              </div>
-        </div>
-        </div>
-  </section>
-        <!-- <div class="row row-cols-auto justify-content-around">
-            <div class="col-md-4">
-                <div class="text-center text-white p-3 mb-3">
-                    <button type="button" class="btn btn-outline-secondary">Orders</button>
-                </div>
+        <div class="modal-body">
+          <form id="bidForm">
+            <div class="form-group">
+              <label for="jobIdInput">Job ID:</label>
+              <input type="text" class="form-control" id="jobIdInput" readonly>
             </div>
+            <!-- Add other form fields for bid details here -->
+          </form>
         </div>
-        <div class="accordion-item">
-            <h4 class="accordion-header" id="headingThree">
-                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                Accordion Item #3
-                </button>
-            </h4>
-            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                <div class="accordion-body">
-                Order Details
-                <br><br>
-                <button type="button" class="btn btn-outline-light">Mark as Delivered</button>
-                </div>
-            </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" onclick="submitBidForm()">Submit Bid</button>
         </div>
-        <div class="row">
-            <div class="col">
-              <div class="row-content">
-                <p class="row-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut eget nisi euismod, cursus tortor vel, semper mauris.</p>
-                <button type="button" class="expand-btn btn btn-outline-success" data-toggle="modal" data-target="#myModal">Expand</button>
-              </div>
-            </div>
-          </div>
-        <div class="row row-cols-auto justify-content-around">
-            <div class="col-md-8">
-                <div class="bg-primary p-3 text-white text-center">
-                    Details
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="text-center text-white p-3 mb-3">
-                    <button type="button" class="btn btn-outline-secondary">Orders</button>
-                </div>
-            </div>
-        </div>  
-    </div> -->
+      </div>
+    </div>
+  </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script> -->
     <!-- Option 2: Separate Popper and Bootstrap JS -->
-    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-    -->
+   
   </body>
 </html>
