--- a/app_flask/templates/signup.html
+++ b/app_flask/templates/signup.html
@@ -30,7 +30,7 @@
         />
         <label for="phonenumber">Phone Number</label>
         <input
-            type="number"
+            type="text"
             class="form-control"
             id="phone_number"
             name="phone_number"
