--- a/app_flask/templates/mechanic_homepage.html
+++ b/app_flask/templates/mechanic_homepage.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../static/styles/button.css">
 </head>
 <body>
+    <h1>{{ mail }}</h1>
     <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light nav-10">
         <img src="../static/images/logo.png" alt="service mtaani logo" srcset="" height="40px">
