--- a/app_flask/templates/vendor_catalogue.html
+++ b/app_flask/templates/vendor_catalogue.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark py-3">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="https://github.com/GKiarie/ServiceMtaani/blob/main/static/images/logo.png?raw=true" alt="" width="43" height="24" class="d-inline-block align-text-top">
+            <img src="../static/images/logo.png" alt="" width="43" height="24" class="d-inline-block align-text-top">
             Service Mtaani
         </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -42,7 +42,7 @@
     <div class="row row-cols-auto justify-content-around">
         <div class="col-md-4">
             <div class="text-center text-white p-3 mb-3">
-                <a href="/vendor/orders" class="btn btn-outline-secondary text-dark" role="button">Orders</a>
+                <a href="/vendor/" class="btn btn-outline-secondary text-dark" role="button">Orders</a>
             </div>
         </div>
         <div class="col-md-4">
