Updated Vendor Catalogue Page to Edit Parts. Missing: Delete Part & Add New Part

--- a/app_flask/templates/mechanic_homepage.html
+++ b/app_flask/templates/mechanic_homepage.html
@@ -184,12 +184,12 @@
             <input type="number" class="form-control" id="formprice" placeholder="Amount in Ksh. eg. 5000">
           </div> -->
           <br><button type="submit" class="submitbutton btn btn-primary">Submit</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
           </form>
           </div>
-          <div class="modal-footer">
+          <!-- <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-            <!-- <a href="/mechanic/place_bid" class="btn btn-outline-secondary text-dark" role="button">Place Order</a> -->
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
