--- a/app_flask/templates/vendor_catalogue.html
+++ b/app_flask/templates/vendor_catalogue.html
@@ -31,6 +31,15 @@
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact</a>
               </li>
+              {% if current_user.is_authenticated %}
+              <li class="nav-item">
+                <a class="nav-link" href="/logout">Log out</a>
+              </li>
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="/">Log In</a>
+              </li>
+              {% endif %}
             </ul>
             <!-- <form class="d-flex">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
@@ -77,7 +86,7 @@
             <strong>Part Information</strong><br>
             Part Name: {{ item.part_name }} <br>Part Description: {{ item.part_description }} <br>Part Price: {{ item.part_price }} <br><br>
             <div>
-                <button type="button" class="btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editModal">Edit</button>
+                <button type="button" class="editPartDetails btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editModal" data-id="{{ item.id }}">Edit</button>
             </div>
           </div>
         </div>
@@ -93,39 +102,42 @@
             <h5 class="modal-title" id="editModalLabel">Edit part</h5>
             </div>
             <div class="modal-body">
-
-                <form>
+                <!-- <form method="POST" action="{{url_for('vendor_catalogue')}}"> -->
+                <form method="POST">
                     <div class="form-group">
                         <label for="formpartname">Edit Part Name</label>
-                        <input type="text" class="form-control" id="formpartname" placeholder="Update part name (leave blank for no change)">
+                        <input type="text" name="part_name" class="form-control" id="formpartname" placeholder="Update part name (leave blank for no change)">
                     </div>
                     <div class="form-group">
                         <label for="formprice">Edit Part Price</label>
-                        <input type="number" class="form-control" id="formprice" placeholder="Update price (leave blank for no change)">
+                        <input type="number" name="part_price" class="form-control" id="formprice" placeholder="Update price (leave blank for no change)">
                     </div>
                     <div class="form-group">
                         <label for="formtextarea">Edit Part Description</label>
-                        <textarea class="form-control" id="formtextarea" rows="3" placeholder="Update description (leave blank for no change)"></textarea>
+                        <textarea class="form-control" name="part_description" id="formtextarea" rows="3" placeholder="Update description (leave blank for no change)"></textarea>
                       </div>
                     <br>
                     <div class="form-group">
                         <label for="addfile">Add file</label><br>
                         <input type="file" class="form-control-file" id="addfile">
                     </div>
+                    <input type="hidden" id="part_id" name="part_id" class="form-control">
+                    <br><button type="submit" class="submitbutton btn btn-primary">Submit Edit</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
                   </form>
 
-            <div class="modal-footer">
+            <!-- <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
             <button type="button" class="btn btn-primary">Submit Edit</button>
-            </div>
+            </div> -->
         </div>
         </div>
     </div>
 
 
-
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
-   
+    <script src="../static/scripts/modal_bid.js"></script>
   </body>
 </html>
