--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -13,7 +13,7 @@
     {% endif %}
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/button.css">
+    <link rel="stylesheet" href="../static/styles/button.css">
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -156,5 +156,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
     <script src="../static/scripts/accept_bids.js"></script>
+    <script src="../static/scripts/create_job.js"></script>
 </body>
 </html>
