client and mech pages

--- a/app_flask/templates/client_homepage.html
+++ b/app_flask/templates/client_homepage.html
@@ -3,13 +3,13 @@
 {% block content %}
 <div class="container">
   <div class="container row">
-    <button type="button" class="btn btn-primary btn-lg btn-jobs col btn-open-jobs  mr-2">Open Jobs</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-jobs col btn-active-jobs mr-2">Active Jobs</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-jobs col  btn-completed-jobs mr-2">Completed Jobs</button>
+    <a type="button" class="btn btn-primary btn-lg btn-jobs col btn-open-jobs  mr-2" href="/client/" >Open Jobs</a>
+    <a type="button" class="btn btn-secondary btn-lg btn-jobs col btn-active-jobs mr-2" href="/client/activejobs">Active Jobs</a>
+    <a type="button" class="btn btn-secondary btn-lg btn-jobs col  btn-completed-jobs mr-2" href="/client/completedjobs">Completed Jobs</a>
     <button type="button" id="openModalBtn" data-toggle="modal" data-target="#createJobModal" class="btn btn-secondary btn-lg btn-request-service btn-jobs col  mr-2">Request a Service</button>
-    <button type="button" class="btn btn-secondary btn-lg btn-jobs col btn-my-orders">My Orders</button>
+    <a type="button" class="btn btn-secondary btn-lg btn-jobs col btn-my-orders" href="/client/myorders">My Orders</a>
   </div>
-
+  <!-- Create Job Modal-->
   <div class="modal" id="createJobModal">
     <div class="modal-dialog">
       <div class="modal-content">
@@ -29,62 +29,39 @@
         <!-- Modal footer -->
         <div class="modal-footer">
           <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-          <button id="submitBtn" type="button" class="btn btn-primary">Submit</button>
+          <button id="submitBtn" type="button" class="btn btn-primary" data-dismiss="modal">Submit</button>
         </div>
       </div>
     </div>
   </div>
+  <!-- End Create Job Modal -->
 
   <div class="container">
     <div class="bd-heading sticky-xl-top align-self-start mt-5 mb-3 mt-xl-0 mb-xl-2">
     </div>
   </div>
+
+  <!-- Jobs Tiles Section -->
   <div class="container">
-    <!-- Start of Accordion orders -->
+    <h1 id="jobs-heading">Open Jobs</h1>
     <div class="accordion" id="accordionExample">
-      {% for item in orders %}
-      <div class="accordion-item">
-          <h2 class="accordion-header" id="heading{{ loop.index }}">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapse{{ loop.index }}" aria-expanded="false" aria-controls="collapse{{ loop.index }}">
-              Part #{{ loop.index }} - {{ item.part_name }}
-            </button>
-          </h2>
-          <div id="collapse{{ loop.index }}" class="accordion-collapse collapse" aria-labelledby="heading{{ loop.index }}" data-bs-parent="#accordionExample">
-            <div class="accordion-body">
-              <strong>Part Information</strong><br>
-              Ordered Part Name: {{ item.order_part_name }} <br>
-              Ordered Part Description: {{ item.order_part_description }} <br>
-              Vendor Name: {{item.vendor_name}} <br>
-              Vendor Phone Number: {{item.vendor_phone_number}} <br>
-              Part Price: {{ item.part_price }} <br><br>
-              <div>
-                  <button type="button" class="editPartDetails btn btn-outline-success" data-bs-toggle="modal" data-bs-target="#editModal" data-id="{{ item.id }}">Edit</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      {% endfor %}
-      </div>
 
-
-
-    <!-- End of Accordion orders -->
-    <h1 id="jobs-heading">Open Bids</h1>
-    <div class="accordion" id="accordionExample">
       {% for job in jobs.values() %}
-
       <div class="card">
         <div class="card-header" id="headingOne">
           <h2 class="mb-0">
-            <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-              Job #{{loop.index}} - {{job[0].job_title}}
+            <button class="btn btn-link btn-block text-left row" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+              <div class="col-md-8">
+                <p>Job #{{loop.index}} - {{job[0].job_title}}</p>
+              </div>
+              <div class="col-md-4">
+                <button class="btn-outline-danger">DELETE</button>
+              </div>
             </button>
           </h2>
         </div>
 
-
         {% for bid in job %}
-
         <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
           <div class="card-body">
 
@@ -112,6 +89,7 @@
       {% endfor %}
     </div>
   </div>
+  <!-- Jobs Section -->
 </div>
 
 
