--- a/app_flask/templates/layout.html
+++ b/app_flask/templates/layout.html
@@ -157,5 +157,7 @@
 
     <script src="../static/scripts/accept_bids.js"></script>
     <script src="../static/scripts/create_job.js"></script>
+    <script src="../static/scripts/modal_bid.js"></script>
+    <script src="../static/scripts/mechanic_homepage.js"></script>
 </body>
 </html>
