--- a/app_flask/templates/mechanic_homepage.html
+++ b/app_flask/templates/mechanic_homepage.html
@@ -1,209 +1,53 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ServiceMtaani</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
-    <link rel="stylesheet" href="../static/styles/button.css">
-</head>
-<body>
-    <div class="container">
-    <nav class="navbar navbar-expand-lg navbar-light bg-light nav-10">
-        <img src="../static/images/logo.png" alt="service mtaani logo" srcset="" height="40px">
-        <a class="navbar-brand" href="#">ServiceMtaani</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About Us</a>
-            </li>
-            
-            <li class="nav-item">
-              <a class="nav-link" href="#">Contact Us</a>
-            </li>
-          </ul>
-          <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-          </form>
-        </div>
-    </nav>
-    </div>
-    <div class="container">
-        <div class="container row">
-        <button type="button" class="btn btn-primary btn-lg col btn-space">Open Jobs</button>
-        <button type="button" class="btn btn-secondary btn-lg col btn-space">Open Bids</button>
-        <button type="button" class="btn btn-secondary btn-lg col btn-space">Active Jobs</button>
-        <button type="button" class="btn btn-secondary btn-lg col btn-space">Completed Jobs</button>   
-        </div>
-        <div class="container job-tile">
-            <!-- Example row of columns -->
-            <div class="row">
-              {% for job in all_jobs %}
-              <div class="col-md-4">
-                <h2>{{ job.job_title }}</h2>
-                <p>{{ job.job_description }}</p>
-                <div>
-                  <button type="button" class="bidForJob btn btn-outline-success" data-id="{{ job.id }}" data-toggle="modal" data-target="#bidModal">Bid For Job</button>
-                </div>
-                <!-- <p><a class="btn btn-secondary" href="#" role="button">Place Bid</a></p> -->
-              </div>
-              {% endfor %}
-            </div>
-        
-            <hr>
-        
-          </div>
-        <div class="container featured-vendors">
-        <!-- carousel -->
-        <div class="container vendor-carousel">
-            <div id="myCarousel" class="carousel slide vh-50" data-ride="carousel">
-                <ol class="carousel-indicators">
-                  <li data-target="#myCarousel" data-slide-to="0" class=""></li>
-                  <li data-target="#myCarousel" data-slide-to="1" class="active"></li>
-                  <li data-target="#myCarousel" data-slide-to="2" class=""></li>
-                </ol>
-                <div class="carousel-inner">
-                  <div class="carousel-item">
-                    <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label=" :  " preserveAspectRatio="xMidYMid slice" focusable="false"><title> </title><rect width="100%" height="100%" fill="#777" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #5a6165;"></rect><text x="50%" y="50%" fill="#777" dy=".3em" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"> </text></svg> -->
-                    <img src="../static/images/mech 2.jpg" width="100%" height="100%" alt="gear image">
-                    <div class="container">
-                      <div class="carousel-caption text-left">
-                        <h1>Example headline.</h1>
-                        <p>Some representative placeholder content for the first slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Sign up today</a></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="carousel-item active">
-                    <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label=" :  " preserveAspectRatio="xMidYMid slice" focusable="false"><title> </title><rect width="100%" height="100%" fill="#777" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"></rect><text x="50%" y="50%" fill="#777" dy=".3em" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"> </text></svg> -->
-                    <img src="../static/images/mech 6.jpg" width="100%" height="100%" alt="gear image">
-                    <div class="container">
-                      <div class="carousel-caption">
-                        <h1>Another example headline.</h1>
-                        <p>Some representative placeholder content for the second slide of the carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Learn more</a></p>
-                      </div>
-                    </div>
-                  </div>
-                  <div class="carousel-item">
-                    <!-- <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" role="img" aria-label=" :  " preserveAspectRatio="xMidYMid slice" focusable="false"><title> </title><rect width="100%" height="100%" fill="#777" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"></rect><text x="50%" y="50%" fill="#777" dy=".3em" data-darkreader-inline-fill="" style="--darkreader-inline-fill: #9d9488;"> </text></svg> -->
-                    <img src="../static/images/mch 2.jpg" width="100%" height="100%" alt="gear image">
-                    <div class="container">
-                      <div class="carousel-caption text-right">
-                        <h1>One more for good measure.</h1>
-                        <p>Some representative placeholder content for the third slide of this carousel.</p>
-                        <p><a class="btn btn-lg btn-primary" href="#">Browse gallery</a></p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-target="#myCarousel" data-slide="prev">
-                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-target="#myCarousel" data-slide="next">
-                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                  <span class="sr-only">Next</span>
-                </button>
-              </div> 
-        </div>
-      </div>
-        <!-- end of carousel -->
+{% extends "layout.html" %}
+{% block content %}
+<div class="container row">
+    <a type="button" class="btn btn-primary btn-lg col btn-space mech-jobs mech-open-jobs" href="/mechanic/">Open Jobs</a>
+    <a type="button" class="btn btn-secondary btn-lg col btn-space mech-jobs mech-open-bids" href="/mechanic/openbids">Open Bids</a>
+    <a type="button" class="btn btn-secondary btn-lg col btn-space mech-jobs mech-active-jobs" href="/mechanic/activejobs">Active Jobs</a>
+    <a type="button" class="btn btn-secondary btn-lg col btn-space mech-jobs mech-completed-jobs" href="/mechanic/completedjobs">Completed Jobs</a>
+</div>
 
-        <div class="container">     
-        <footer class="pt-4 my-md-5 pt-md-5 border-top">
-            <div class="row">
-            <div class="col-12 col-md">
-                <img class="mb-2" src="../static/images/logo.png" alt="" width="30" height="20">
-                <small class="d-block mb-3 text-muted">© 2023</small>
+<div class="container job-tile">
+    <!-- Example row of columns -->
+    <div class="row">
+        {% for job in all_jobs %}
+        <div class="col-md-4">
+            <h2>{{ job.job_title }}</h2>
+            <p>{{ job.job_description }}</p>
+            <div>
+                <button type="button" class="bidForJob btn btn-outline-success" data-id="{{ job.id }}" data-toggle="modal" data-target="#bidModal">Bid For Job</button>
             </div>
-            <div class="col-6 col-md">
-                <h5>Features</h5>
-                <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Cool stuff</a></li>
-                <li><a class="text-muted" href="#">Random feature</a></li>
-                <li><a class="text-muted" href="#">Team feature</a></li>
-                <li><a class="text-muted" href="#">Stuff for developers</a></li>
-                <li><a class="text-muted" href="#">Another one</a></li>
-                <li><a class="text-muted" href="#">Last time</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>Resources</h5>
-                <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Resource</a></li>
-                <li><a class="text-muted" href="#">Resource name</a></li>
-                <li><a class="text-muted" href="#">Another resource</a></li>
-                <li><a class="text-muted" href="#">Final resource</a></li>
-                </ul>
-            </div>
-            <div class="col-6 col-md">
-                <h5>About</h5>
-                <ul class="list-unstyled text-small">
-                <li><a class="text-muted" href="#">Team</a></li>
-                <li><a class="text-muted" href="#">Locations</a></li>
-                <li><a class="text-muted" href="#">Privacy</a></li>
-                <li><a class="text-muted" href="#">Terms</a></li>
-                </ul>
-            </div>
-            </div>
-        </footer>
-        </div>      
+            <!-- <p><a class="btn btn-secondary" href="#" role="button">Place Bid</a></p> -->
+        </div>
+        {% endfor %}
     </div>
+    <hr>
+</div>
 
-    <!-- Modal test -->
-    <div class="modal fade" id="bidModal" tabindex="-1" aria-labelledby="bidModalLabel" aria-hidden="true">
-      <div class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="bidModalLabel">Place Bid</h5>
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body">
-          <form method="POST" id="form1">
-            <div class="form-group">
-              <label for="formprice">Enter Bid Amount</label>
-              <input type="number" class="form-control" name="bid_amount" id="formprice" placeholder="Amount in Ksh. eg. 5000">
-              <input type="hidden" name="mechanic_id" value="{{ current_user.id }}">
-              <input type="hidden" id="job_id" name="job_id" class="form-control">
-              
-          </div>
-          <!-- <div class="form-group">
+<!-- Place Bid Modal  -->
+<div class="modal fade" id="bidModal" tabindex="-1" aria-labelledby="bidModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="bidModalLabel">Place Bid</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+        <form method="POST" id="form1">
+          <div class="form-group">
             <label for="formprice">Enter Bid Amount</label>
-            <input type="number" class="form-control" id="formprice" placeholder="Amount in Ksh. eg. 5000">
-          </div> -->
-          <br><button type="submit" class="submitbutton btn btn-primary">Submit</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          </form>
-          </div>
-          <!-- <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          </div> -->
+            <input type="number" class="form-control" name="bid_amount" id="formprice" placeholder="Amount in Ksh. eg. 5000">
+            <input type="hidden" name="mechanic_id" value="{{ current_user.id }}">
+            <input type="hidden" id="job_id" name="job_id" class="form-control">
+
+        </div>
+        <br><button type="submit" class="submitbutton btn btn-primary">Submit</button>
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        </form>
         </div>
       </div>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct" crossorigin="anonymous"></script>
-    <script src="../static/scripts/modal_bid.js"></script>
-    <!-- <script type="text/javascript">
-      $("#form1").submit( function(eventObj) {
-        $("<input />").attr("type", "hidden")
-          .attr("name", "something")
-          .attr("value", "something")
-          .appendTo("#form1");
-      return true;
-      });
-    </script> -->
-</body>
-</html>
+  </div>
+{% endblock content %}
